# chanx

./: CHANGELOG.md  pyproject.toml
chanx/asyncapi/: type_defs.py
chanx/client_generator/: codegen.py
chanx/core/: registry.py  websocket.py
docs/user-guide/: consumers-decorators.rst
sandbox_fastapi/apps/: mixins.py
sandbox_fastapi/apps/showcase/: consumer.py  messages.py
sandbox_fastapi/tests/: test_showcase.py
sandbox_fastapi/tests/test_results/: asyncapi_schema.json  asyncapi_schema.yaml
tests/client_generation/: test_codegen.py
tests/core/: test_registry.py  test_websocket.py
tests/core/asyncapi/: test_generator.py
